Fix quote spacing (remove min-width and add padding).

--- a/themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
+++ b/themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
@@ -103,7 +103,8 @@
 
     .quote--author {
       @media (min-width: $screen-sm-min) {
-        min-width: 18rem;
+        //min-width: 18rem;
+        padding-right: 1rem;
       }
     }
   }
